# locker

./: .gitignore  .xsession  Deployment.md  LICENSE  README.md  bus.py  card_auth.py  example_conf.json  totp_auth.py  ui.py
config/: 99-calibration.conf  99-fbturbo.conf  autostart  fbcp.service  start-fjaelllada.sh  start_fbcp.sh
depot-oben-eda/: depot-oben-eda.kicad_pcb  depot-oben-eda.kicad_pro  depot-oben-eda.kicad_sch  depot-pcb-outline.dxf
software/: README.md  justfile  pyproject.toml
software/fjaelllada/: env.py
software/fjaelllada/db/: card_db.py  log.py  text_db.py  totp_db.py
software/fjaelllada/depot_bay/: ui.py
software/fjaelllada/depot_bay/widgets/: main_window.py  register.py  style.qss
software/fjaelllada/seil_locker/: bus.py  db.py
software/fjaelllada/seil_locker/widgets/: main_window.py  style.qss
software/fjaelllada/widgets/: admin.py  message_dialog.py  nfc_reader.py  pin_input.py  qr_code_pixmap.py  text_input.py
src/fjaelllada/: bus.py  card_auth.py  db_sync.py  env.py  totp_auth.py  ui.py
src/fjaelllada/db/: __init__.py  card_db.py  text_db.py  totp_db.py
src/fjaelllada/depot_bay/: config.py
src/fjaelllada/seil_locker/: bus.py  db.py  ui.py
src/fjaelllada/widgets/: admin.py  bay.py  main_window.py  manage_users.py  message_dialog.py  nfc_reader.py  qr_code_pixmap.py  register_admin.py  register_user.py
widgets/: admin.py  base.py  bay.py  main_window.py  manage_users.py  message_dialog.py  nfc_reader.py  pin_input.py  register.py  register_admin.py  register_user.py  style.qss  text_input.py
(+5 files in other folders)
