[tool.poetry]
name = "fjaelllada"
version = "1.0.0"
description = ""
authors = ["Lukas Vögtle"]
license = "BSD-3-clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyscard = "^2.2.0"
qrcode = "^8.0"
pyotp = "^2.9.0"
rpi-gpio = "^0.7.1"
smbus = "^1.1.post2"
pyqt5 = "^5.15.11"
filelock = "^3.16.1"

[tool.poetry.scripts]
seil-locker = "fjaelllada.seil_locker.ui:main"
depot = "fjaelllada.depot_bay.ui:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
