[tool.poetry]
name = "fjaelllada"
version = "1.0.4"
description = ""
authors = ["Lukas Vögtle", "Kai Kasprovsky", "Andreas Philipp"]
license = "BSD-3-clause"
readme = "README.md"

[tool.poetry.dependencies]
# the following packages are pinned to match the versions
# of the raspberry pi apt packages python3-*
# to avoid compiling pyqt5 and pyscard
pyqt5 = "5.15.9"
pyscard= "2.0.5"

# looser version restrictions for non binary packages
python = "^3.9"  # current Raspbian ships with py 3.9.2
qrcode = "^8.0"
pyotp = "^2.9.0"
rpi-gpio = "^0.7.1"
smbus = "^1.1.post2"
filelock = "^3.16.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
seil-locker = "fjaelllada.seil_locker.ui:main"
depot-bay = "fjaelllada.depot_bay.ui:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
